# j-

./: bootstrap.sh  configure.ac
include/kava/: thread.h  type-flags.h
src/: Makefile.am
src/include/: Makefile.am
src/include/kava/: memory.h
src/include/kava/posix/: thread.h  unistd.h
src/include/kava/posix/sys/: stat.h
src/kavac/: Makefile.am  kavac.c  lexer.l  main.c  memory.c  memory.h  parser.y  semantic-types.h
src/kavac/include/kavac/: error.h
src/kavac/lexical/: Makefile.am  file-chunker-test.c  file-chunker.c  file-chunker.h  string-stream.c  string-stream.h  utf8-stream-test.c  utf8-stream.c  utf8-stream.h
src/kavac/util/: Makefile.am  error.c
src/kavavm/: Makefile.am
src/libkava/: Makefile.am  libkava.c
